--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <form action="/step1" method="post">
+  <form action="/lec02" method="post">
     <p>
       <input type="text" name="name">
       <input type="submit" value="入室">
